--- a/index.html
+++ b/index.html
@@ -5,31 +5,24 @@
 <title>Illuminometer (at 8am.)</title>
 <meta name="description" content="照度計を表示します。jQueryとCanvasで作成しています。">
 <meta name="author" content="8am.jp">
-<meta name="keywords" content="照度計,光度計,HTML5,jQuery,CSS3,W3C">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no"> 
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta http-equiv="content-language" content="ja">
 <link rel="icon" type="image/png" href="./icon.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./icon.png">
-<!-- Bootstrap CDN -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-<!-- Google Fonts -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 <link rel='stylesheet' href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" type="text/css">
-<link rel="stylesheet" href="http://8am.jp/apps/lib/8am.apps.css">
-<link rel="stylesheet" href="./illuminometer.css">
+<link rel="stylesheet" href="./app.css">
 </head>
 <body>
 <div id="dashboard">
-  <canvas width="640" height="640" style="z-index:0"></canvas>
-  <canvas width="640" height="640" style="z-index:1"></canvas>
+    <canvas width="640" height="640" style="z-index:0"></canvas>
+    <canvas width="640" height="640" style="z-index:1"></canvas>
 </div>
-<!-- jQuery CDN -->
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<!-- Bootstrap CDN -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-<script src="./illuminometer.js"></script>
+<script src="http://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="./app.js"></script>
 </body>
 </html>
